php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46319 PHP sets default Content-Type header for HTTP 304 response code
Submitted: 2008-10-16 20:00 UTC Modified: 2008-10-17 01:34 UTC
From: aragon at phat dot za dot net Assigned:
Status: Closed Package: CGI/CLI related
PHP Version: 5.2.6 OS: Linux
Private report: No CVE-ID: None
 [2008-10-16 20:00 UTC] aragon at phat dot za dot net
Description:
------------
This bug is identical to 33057 from 2005, except it is particular to PHP in CGI mode.

Reproduce code:
---------------
Please see bug 33057.

Expected result:
----------------
Please see bug 33057.

Actual result:
--------------
Please see bug 33057.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-17 01:34 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC