MFB: Fixed bug #46319 (PHP sets default Content-Type header for HTTP 304 response code, in cgi sapi)